instance1/temp-retrieve/objects/Log__e/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <label>Apex Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>