instance1/temp-retrieve/objects/Log__e/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>