instance1/temp-retrieve/objects/Log__e/fields/Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Request_Method__c</fullName>
    <label>Request Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>