instance1/temp-retrieve/objects/Log__e/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <label>Request URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>