instance1/temp-retrieve/objects/Log__e/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>